terraform/instance.tf
resource "aws_security_group" "ec2_sg" {
  name        = "instance-sg"
  description = "Security group for EC2 instances"
  vpc_id      = aws_default_vpc.default.id

  ingress {
    description     = "Allow HTTP traffic from ELB instances"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.elb_sg.id]
  }

  ingress {
    description = "Allow SSH traffic from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Rule required for Docker Swarm"
    from_port   = 2377
    to_port     = 2377
    protocol    = "tcp"
    self        = true
  }

  ingress {
    description = "Rule required for Docker Swarm"
    from_port   = 7946
    to_port     = 7946
    protocol    = "tcp"
    self        = true
  }

  ingress {
    description = "Rule required for Docker Swarm"
    from_port   = 7946
    to_port     = 7946
    protocol    = "udp"
    self        = true
  }

  ingress {
    description = "Rule required for Docker Swarm"
    from_port   = 4789
    to_port     = 4789
    protocol    = "udp"
    self        = true
  }

  ingress {
    description = "Rule required for MySQL"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    self        = true
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "tls_private_key" "private_key" {
  algorithm = "RSA"
  rsa_bits  = 2048
}

resource "aws_key_pair" "instance_key_pair" {
  key_name   = "instance-key-pair"
  public_key = tls_private_key.private_key.public_key_openssh
}

resource "aws_instance" "instance" {
  count                  = length(var.instances)
  ami                    = "ami-02df5cb5ad97983ba"
  instance_type          = "t3.micro"
  availability_zone      = var.instances[count.index].availability_zone
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
  key_name               = aws_key_pair.instance_key_pair.key_name
  iam_instance_profile   = aws_iam_instance_profile.ec2_iam_profile.name
  tags = {
    Name = var.instances[count.index].name
  }
}

locals {
  gateway_instance_indices = [
    for i in range(length(var.instances)) : i
    if var.instances[i].is_gateway == true
  ]
}
